# roman02s-technoparkC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: ci.yml
add/: CMakeLists.txt  add.c  add.h
food/: CMakeLists.txt  food.c  food.h
input/: CMakeLists.txt  input.c  input.h
linters/: run.sh
project/include/: matrix.h
project/src/: matrix_transpose_multi_thread.c  matrix_transpose_one_thread.c
project/tests/: CMakeLists.txt  tests_matrix_transpose_multi_thread.cpp  tests_matrix_transpose_one_thread.cpp
project/tests/stress/: CMakeLists.txt  stress_test_matrix_transpose_multi_thread.c  stress_test_matrix_transpose_one_thread.c
project/tests/stress/include/: gen_matrix.h
project/tests/stress/src/: gen_matrix.c
tests/: CMakeLists.txt  main.c
tests/food/: CMakeLists.txt  food.c  food.h
tests/test_1/: test_1.in  test_1.out
tests/tests/: test_fib.cpp
